compile_tests/expected/operators.stderr
error: unsupported binary operator
  --> compile_tests/src/operators.rs:11:56
   |
11 |     static UNSUPPORTED_BINARY: U32 = CONSTANT.to_gpu() & CONSTANT.to_gpu();
   |                                                        ^

error[E0600]: cannot apply unary operator `!` to type `U32`
  --> compile_tests/src/operators.rs:9:33
   |
9  |     static INVALID_UNARY: U32 = !CONSTANT.to_gpu();
   |                                 ^^^^^^^^^^^^^^^^^^ cannot apply unary operator `!`
   |

error[E0308]: arguments to this function are incorrect
   --> compile_tests/src/operators.rs:10:34
    |
10  |     static INVALID_BINARY: U32 = CONSTANT.to_gpu() && CONSTANT.to_gpu();
    |                                  ^^^^^^^^---------    ----------------- expected `Bool`, found `U32`
    |                                  |
    |                                  expected `Bool`, found `U32`
    |

error[E0308]: mismatched types
  --> compile_tests/src/operators.rs:10:34
   |
10 |     static INVALID_BINARY: U32 = CONSTANT.to_gpu() && CONSTANT.to_gpu();
   |                                  ^^^^^^^^ expected `U32`, found `Bool`

error[E0369]: no implementation for `U32 & U32`
  --> compile_tests/src/operators.rs:11:56
   |
11 |     static UNSUPPORTED_BINARY: U32 = CONSTANT.to_gpu() & CONSTANT.to_gpu();
   |                                      ----------------- ^ ----------------- U32
   |                                      |
   |                                      U32
   |

error[E0308]: mismatched types
  --> compile_tests/src/operators.rs:15:32
   |
15 |         *UNSUPPORTED_BINARY += true;
   |         -------------------    ^^^^ expected `U32`, found `Bool`
   |         |
   |         expected because this is `U32`